--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
 
-body{
-    background-color:  #fff; 
-}
-
 
 .menu {
 	display: flex;
@@ -30,6 +26,7 @@ h1 {
   
 .main .footer{
     margin: 50px 0;
+    
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -41,7 +38,7 @@ h1 {
 }
 
 .main .footer .footer-header{
-    max-width: 50%;
+    max-width: 100%;
     font-weight: 500;
     font-size: 30px;
     line-height: 40px;
@@ -244,6 +241,7 @@ body{
     max-width: 1200px;
     font-family: 'Lato';
     color: #000;
+    background-color:  #fff;
 }
 
 .icon-cart{
@@ -264,7 +262,11 @@ img{
 header{
     display: flex;
     justify-content: space-between;
-    padding: 30px 0 40px 0;
+    padding: 10px 0 0px 0;
+    width: 100%;
+    top:0;
+    z-index:1000;
+   
 }
 
 .container-icon{
@@ -373,7 +375,7 @@ header{
 /* Main */
 .container-items{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
 }
 
