--- a/styles.css
+++ b/styles.css
@@ -28,11 +28,14 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color:#ffdbac;
+
 }
 
 .main .copyright{
     padding-bottom: 25px;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid #000;
+    background-color:#ffdbac;
 }
 
 .main .footer .footer-header{
@@ -232,7 +235,7 @@ body{
     max-width: 1200px;
     font-family: 'Lato';
     color: #000;
-    background-color: #ffd092;
+    background-color: #fff;
 }
 
 .icon-cart{
@@ -257,6 +260,7 @@ header{
     width: 100%;
     top:0;
     z-index:1000;
+    background-color:#ffdbac;
    
 }
 
