--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 .menu {
 	display: flex;
 	gap: 2rem;
+    
 }
 
 .menu li {
@@ -435,4 +436,11 @@ header{
   'wght' 400,
   'GRAD' 0,
   'opsz' 24
+}
+
+/*titulos- heading-1*/
+.heading-1 {
+	text-align: center;
+	font-weight: 500;
+	font-size: 3rem;
 }
