--- a/styles.css
+++ b/styles.css
@@ -375,8 +375,12 @@ header{
 }
 
 .item{
-    border-radius: 10px;
+    
     background-color: #ffdbac;
+    border: 2px solid #ffdbac;
+    border-radius: 10px; /* Ajusta el valor según el radio de redondeo que desees */
+    padding: 15px;
+
 }
 
 .item:hover{
@@ -389,6 +393,7 @@ header{
     object-fit: cover;
     border-radius: 10px 10px 0 0;
     transition: all .5s;
+    background-color: #ffdbac;
 }
 
 .item figure{
@@ -480,7 +485,7 @@ header{
 }
 
 .card-category {
-	height: 20rem;
+	height: 15rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
