--- a/Estilos2.css
+++ b/Estilos2.css
@@ -395,7 +395,7 @@ p {
 .item {
 	position: relative;
 	background-color: #fff;
-	border: 2px solid #ffdbac;
+	border: 2px solid #A51C30;
 	border-radius: 10px;
 	padding: 15px;
 	overflow: hidden;
