--- a/Estilos2.css
+++ b/Estilos2.css
@@ -77,7 +77,7 @@ h5 {
 
 .container-logo h1 a {
     text-decoration: none;
-    color: #000;
+    color:#fff;
     font-size: 3rem;
     text-transform: uppercase;
     letter-spacing: -1px;
