--- a/Estilos2.css
+++ b/Estilos2.css
@@ -158,6 +158,8 @@ h2 {
     position: relative;
 }
 
+
+/*    ANIMACION
 .menu a::after {
     content: '';
     width: 1.5rem;
@@ -178,7 +180,7 @@ h2 {
 .menu a:hover {
     color: #fff;
 }
-
+*/
 .search-form {
     position: relative;
     display: flex;
@@ -353,10 +355,13 @@ p {
 }
 
 .container-items {
-	display: grid;
-    padding: 0%;
-	grid-template-columns: repeat(5, 1fr);
-	gap: 20px;
+	max-width: 110rem; /* ajusta el ancho máximo según sea necesario */
+    margin: 0 auto; /* centrar horizontalmente */
+    padding: 0 2rem; /* agregar espacio a ambos lados */
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
+
 
    
 }
@@ -376,13 +381,15 @@ p {
 	overflow: hidden;
 }
 
+
+
 .item:hover {
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
 }
 
 .item img {
 	width: 100%;
-	height: 300px;
+	/*height: 300px;*/
 	object-fit: cover;
 	border-radius: 10px 10px 0 0;
 	transition: all .5s;
@@ -393,9 +400,10 @@ p {
 	overflow: hidden;
 }
 
+/* ANIMACION 
 .item:hover img {
 	transform: scale(1.2);
-}
+}*/
 
 .info-product {
 	padding: 15px 30px;
