--- a/Estilos2.css
+++ b/Estilos2.css
@@ -187,21 +187,6 @@ h1.Tiendita {
     color: #fff;
 }
 */
-.search-form {
-    position: relative;
-    display: flex;
-    align-items: center;
-    border: 2px solid #fff;
-    border-radius: 2rem;
-    background-color: #fff;
-    height: 4.4rem;
-    overflow: hidden;
-}
-
-
-
-
-
 
 .container-icon{
     position: relative;
@@ -237,7 +222,7 @@ h1.Tiendita {
         /* Establecer una anchura para que los elementos no se ajusten */
         width: 100%;
     }
-
+   /*LISTA DE*/
     background-color: #fff;
     width: 400px;
     z-index: 1;
@@ -324,11 +309,30 @@ img{
     max-width: 100%;
 }
 
+/* Estilo del logo */
+.logo img {
+    width: 100px; /* Ajusta el tamaño según necesites */
+    height: auto;
+    border-radius: 40%; /* Esto hace que el contenedor del logo sea un círculo */
+    overflow: hidden; /* Oculta cualquier contenido que se extienda más allá del borde */
+    margin-left: 50px; /* Ajusta el margen derecho para separar el logo de los elementos de navegación */
+}
+
+.mensaje {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 40px; /* Ajustar el padding para hacer el mensaje más grande */
+    border-radius: 10px; /* Ajustar el radio de borde para hacer el mensaje más redondeado */
+    z-index: 9999;
+    font-size: 24px; /* Ajustar el tamaño de fuente para hacer el mensaje más grande */
+}
 /* ********************************** */
 /*            body              */
 /* ********************************** */
-
-
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
@@ -367,9 +371,6 @@ p {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 20px;
-
-
-   
 }
 
 .main .productos {
@@ -467,8 +468,8 @@ p {
 	transform: translateY(-50%);
 	width: 30px;
 	height: 30px;
-	background-color: rgba(0, 0, 0, 0.5);
-	color: white;
+	background-color: #fff;
+	color:#A51C30 ;
 	font-size: 20px;
 	text-align: center;
 	cursor: pointer;
@@ -581,6 +582,19 @@ p {
 	color: var(--primary-color);
 }
 
+.stars {
+    display: flex; /* Cambiamos de grid a flexbox para simplificar el diseño */
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
+    height: 10%; /* Ajusta la altura del contenedor */
+  }
+  
+  .stars i {
+    font-size: 1.3rem;
+    color: var(--primary-color);
+    margin: 0 2px; /* Ajusta el margen entre las estrellas */
+  }
+
 /* ********************************** */
 /*               FOOTER               */
 /* ********************************** */
@@ -611,11 +625,22 @@ p {
 
 .contact-info,
 .information,
-.my-account,
+.my-account {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
 .newsletter {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    align-items: flex-start; /* Alinear los elementos verticalmente en la parte superior */
+    
+    
+}
+.newsletter p{
+    font-size: 1.5rem;
+    color:#fff;
 }
 
 .contact-info ul,
@@ -687,7 +712,7 @@ p {
 }
 
 .content p {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     color: #fff;
     font-weight: 300;
 }
@@ -742,27 +767,8 @@ p {
 }
 
 
-/* Estilo del logo */
-.logo img {
-    width: 100px; /* Ajusta el tamaño según necesites */
-    height: auto;
-    border-radius: 40%; /* Esto hace que el contenedor del logo sea un círculo */
-    overflow: hidden; /* Oculta cualquier contenido que se extienda más allá del borde */
-    margin-left: 50px; /* Ajusta el margen derecho para separar el logo de los elementos de navegación */
-}
 
-.stars {
-    display: flex; /* Cambiamos de grid a flexbox para simplificar el diseño */
-    justify-content: center; /* Centra horizontalmente */
-    align-items: center; /* Centra verticalmente */
-    height: 10%; /* Ajusta la altura del contenedor */
-  }
-  
-  .stars i {
-    font-size: 1.3rem;
-    color: var(--primary-color);
-    margin: 0 2px; /* Ajusta el margen entre las estrellas */
-  }
+
 
   
   
