--- a/Estilos2.css
+++ b/Estilos2.css
@@ -3,7 +3,7 @@
 :root {
     --primary-color: #A51C30;
     --background-color: #f9f5f0;
-    --dark-color: #fff;
+    --dark-color: #f3f3f3;
 }
 
 html {
